[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Graphics/tweezersClosed.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/tweezersOpened.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Tweezers.gd" type="Script" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("tweezers_end/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "tweezers"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tweezers_end/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "tweezers_closed"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tweezers_end/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 17.1172

[node name="tweezers" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 3 )

[node name="tweezers" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/tweezers = SubResource( 1 )
anims/tweezers_closed = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 105, 3 )
frames = SubResource( 3 )

[node name="tweezers_end" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tweezers_end"]
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="tweezers_end"]
scale = Vector2( -25.4665, -2.30887 )

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="tweezers" to="." method="_on_tweezers_animation_finished"]
[connection signal="body_entered" from="tweezers_end" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
